# appinsights-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md
.github/: .kodiak.toml  dependabot.yml
.github/workflows/: ci.yml
appinsights/: Cargo.toml
appinsights-contracts-codegen/: Cargo.toml
appinsights-contracts-codegen/schema/: AvailabilityData.json  Base.json  ContextTagKeys.json  Data.json  DataPoint.json  DataPointType.json  Domain.json  Envelope.json  EventData.json  ExceptionData.json  ExceptionDetails.json  MessageData.json  MetricData.json  PageViewData.json  RemoteDependencyData.json  RequestData.json  SeverityLevel.json  StackFrame.json
appinsights-contracts-codegen/src/: lib.rs  main.rs  parser.rs
appinsights-contracts-codegen/src/ast/: attributes.rs  enums.rs  fields.rs  schemas.rs  structs.rs  types.rs
appinsights-contracts-codegen/src/bond/: compiler.rs  generator.rs  mod.rs  parser.rs
appinsights-contracts-codegen/src/bond/ast/: enums.rs  fields.rs  mod.rs  namespaces.rs  schemas.rs  structs.rs  types.rs
appinsights-contracts-codegen/src/bond/v2/: compiler.rs  mod.rs  visitor.rs
appinsights-contracts-codegen/src/compiler/: mod.rs  module.rs  visitor.rs
appinsights-contracts-codegen/src/compiler/generator/: enums.rs  mod.rs  packages.rs  schemas.rs  structs.rs  types.rs
appinsights/examples/: blocking.rs  default.rs  tokio.rs
appinsights/src/: channel.rs  client.rs  config.rs  context.rs  lib.rs  systemtime.rs  time.rs  timeout.rs  transmitter.rs  uuid.rs
appinsights/src/blocking/: integration_tests.rs  mod.rs
appinsights/src/channel/: command.rs  memory.rs  mod.rs  old.rs  old_state.rs  retry.rs  state.rs
appinsights/src/client/: integration_tests.rs  mod.rs
appinsights/src/contracts/: availabilitydata.rs  base.rs  context_tag_keys.rs  contexttagkeys.rs  data.rs  data_point.rs  data_point_type.rs  datapoint.rs  datapointtype.rs  domain.rs  envelope.rs  event_data.rs  eventdata.rs  exception_data.rs  exception_details.rs  exceptiondata.rs  exceptiondetails.rs  messagedata.rs  metric_data.rs  metricdata.rs  mod.rs  pageviewdata.rs  remote_dependency_data.rs  remotedependencydata.rs  request_data.rs  requestdata.rs  response.rs  severity_level.rs  severitylevel.rs  stackframe.rs  tests.rs
appinsights/src/telemetry/: availability.rs  event.rs  exception.rs  measurements.rs  mod.rs  page_view.rs  properties.rs  remote_dependency.rs  request.rs  tags.rs  trace.rs
appinsights/src/telemetry/metric/: aggregation.rs  measurement.rs  mod.rs  stats.rs
appinsights/src/transmitter/: client.rs  mod.rs  transmission.rs  transmitter.rs
appinsights/tests/: client.rs  logger.rs  telemetry.rs  telemetry_blocking.rs
