[package]
name = "appinsights"
version = "0.1.5"
authors = ["dmolokanov <dmolokanov@users.noreply.github.com>"]
edition = "2018"
description = "Application Insights SDK for Rust"
license = "MIT"
documentation = "https://docs.rs/appinsights"
repository = "https://github.com/dmolokanov/appinsights-rs"
readme = "../README.md"
keywords = ["logging", "tracing", "metrics", "APM"]
categories = [
    "development-tools::debugging",
    "development-tools::profiling"
]

[features]
default = ["reqwest/default-tls"]
rustls = ["reqwest/rustls-tls"]

[dependencies]
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = "1.0"
chrono = "0.4"
http = "0.2.1"
uuid = { version = "0.8", features = ["v4"], default-features = false }
reqwest = { version = "0.10", features = ["blocking", "json"], default-features = false }
log = "0.4"
crossbeam-channel = "0.5"
sm = "0.9"
paste = "1.0"
hostname = "0.3"

[dev-dependencies]
test-case = "1.0"
env_logger = "0.7"
mockito = { version = "0.27.0", default-features = false }
lazy_static = "1.4"
matches = "0.1"
hyper = { version = "0.13.8" }
tokio = { version = "0.2.22", default-features = false }
futures = { version = "0.3.6", default-features = false }
