[package]
name = "appinsights"
version = "0.2.2"
authors = ["dmolokanov <dmolokanov@users.noreply.github.com>"]
edition = "2018"
description = "Application Insights SDK for Rust"
license = "MIT"
documentation = "https://docs.rs/appinsights"
repository = "https://github.com/dmolokanov/appinsights-rs"
readme = "../README.md"
keywords = ["logging", "tracing", "metrics", "APM"]
categories = [
    "development-tools::debugging",
    "development-tools::profiling"
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
doctest = false

[features]
default = ["reqwest/default-tls"]
rustls = ["reqwest/rustls-tls"]
blocking = []

[dependencies]
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = "1.0"
chrono = { version = "0.4.20", features = ["clock"], default-features = false }
http = "0.2"
uuid = { version = "0.8", features = ["v4"], default-features = false }
reqwest = { version = "0.11", features = ["json"], default-features = false }
log = "0.4"
sm = "0.9"
tokio = { version = "1", features = ["rt"], default-features = false }
paste = "1.0"
hostname = "0.3"
futures-util = { version = "0.3", default-features = false }
futures-channel = "0.3"
crossbeam-queue = "0.3"
async-trait = "0.1.51"

[dev-dependencies]
test-case = "1.2"
env_logger = "0.9"
lazy_static = "1.4"
matches = "0.1"
hyper = { version = "0.14", features = ["server"], default-features = false }
tokio = { version = "1.10", features = ["macros", "rt-multi-thread"], default-features = false }
parking_lot = "0.11"

[[example]]
name = "blocking"
required-features = ["blocking"]
